@@ -4,6 +4,8 @@ Changes in version 3.1.0:
 * Issue 36: XMLExporter generating invalid XML, when special characters are present
   in a TermVector field (Craig.Stires)
 * Issue 17: Recent changes to DocReconstructor sometimes cause null ref (solrtrey)
+* Issue 19: Custom directory implementation must be inherited from
+  FSDirectory (mitja.lenic)
 
 ---------------------------------------------------------------------------
   Changes in v. 1.0.1 (released on 2010.04.01):
